-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.2.0
-
None
-
-
caf2d6369 (dev), 2f809c8ca (6.10), c8f872d2b (6.9), d1cb644a1 (tqtc/lts-6.8)
-
2021wk44POAndroid&Mobile, 2021wk46POAndroid&Mobile, 2021wk48POAndroid&Mobile, 2021wk50POAndroid&Mobile, 2022wk02FOAndroid&Automotive, 2025wk26s2QtforAndroid
On Android, we need to choose the first file format instead of the default file format.
Steps to reproduce:
1. Run AudioRecorder example on Android device
2. Leave File Container as Default file format
3. Click Output button for open FileDialog
Actual:
Initial file name is "output."
File format missing.
Expected:
Initial file name should be as eg. "output.aac"