Examples: Fix missing file extension in AudioRecorder on Android

The AudioRecorder example lets users set the output file name with its
extension. On Android, file name and extension are filled wit some
default values. This worked correctly for all formats except when
"Default file format" was selected - no extension was added in that
case.

This patch ensures that a proper file extension is used for the
"Default file format" option on Android.

Fixes: QTBUG-98145
Change-Id: Ibccc3480808c2e9bdf31573bc31b6e1563724af5
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
(cherry picked from commit caf2d6369c494becab3f67ae1098c068cc46d359)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2f809c8cad1046617dfd579e43aad9d621f8ccbe)
(cherry picked from commit c8f872d2b891505e18357b98fef1bbe60dbfac4c)